--- a/client/src/app/components/lead-management/lead-poc/lead-poc.component.html
+++ b/client/src/app/components/lead-management/lead-poc/lead-poc.component.html
@@ -1,2 +1,5 @@
+<div class="page-overlay-wrapper" *ngIf="isLoading">
+    <mat-spinner class="spinner"></mat-spinner>
+</div>
 <button mat-raised-button (click)="onAddNewPoc()" color="primary" style="width: 100%;">Add Lead POC</button>
 <app-table style="height: 90vh;" [columnDefs]="columnDefs" [rowData]="rowData"></app-table>
